Change bigimg to cover-img, correct img path

--- a/_posts/2019-06-05-ps mqtt.md
+++ b/_posts/2019-06-05-ps mqtt.md
@@ -3,7 +3,7 @@ layout: post
 title: "PowerShell and MQTT"
 tags: [powershell, code, mqtt, iot]
 category: PowerShell
-bigimg: "/img/head/code.jpg"
+cover-img: "/assets/img/head/code.jpg"
 ---
 
 A small blog entry how to use MQTT in Powershell, as a library I use M2MQTT.
