--- a/_posts/2018-05-04-first.md
+++ b/_posts/2018-05-04-first.md
@@ -2,7 +2,7 @@
 layout: post
 title: First Post
 show-img: true
-image: /assets/img/hello_world.jpeg
+thumbnail-img: /assets/img/hello_world.jpeg
 ---
 
 A new series of posts?
