Fix: Use thump files

--- a/_posts/2025-04-03-40k-Ruins.md
+++ b/_posts/2025-04-03-40k-Ruins.md
@@ -4,8 +4,9 @@ title: Some colored ruins
 subtitle:
 show-img: true
 tags: [Tabletop, Painting, 40k, Terrain]
-thumbnail-img: /img/posts/2025-04-03/ruins.jpg
+thumbnail-img: /img/posts/2025-04-03/ruins_thump.jpg
 ---
 
-<img src="../img/posts/2025-04-03/ruins.jpg">
-Some colored ruins
+Some colored ruins.
+
+{% include image-gallery.html folder= "/img/posts/2025-04-03/ruins.jpg" title=false %}
