--- a/_posts/2025-04-21-a-new-star.md
+++ b/_posts/2025-04-21-a-new-star.md
@@ -4,8 +4,9 @@ title: A new star
 subtitle:
 show-img: true
 tags: [Tabletop, Miniture, Painting, Battletech, Clan]
-thumbnail-img: /img/posts/2025-04-21/star.jpg
+thumbnail-img: /img/posts/2025-04-21/star_thump.jpg
 ---
 
-<img src="../img/posts/2025-04-21/star.jpg">
 A new star of steel and honor enters the battlefield.
+
+{% include image-gallery.html folder= "/img/posts/2025-04-21/star" title=false %}
